Migrate to jdk11